# rgdal

./: DESCRIPTION  configure.ac
R/: wrappers.R
src/: Makevars.in  OGR_write.cpp  gdal-bindings.cpp  init.c  init.cpp  ogr_geom.cpp  rgdal.h
vignettes/: OGR_shape_encoding.Rnw  PROJ.bib  vignettes.Rmd
